<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:singleLine="true"
            android:textColor="@color/text" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:padding="3dp">

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_address"
            android:gravity="center_vertical|start"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:autofillHints=""
            android:inputType="textUri"
            android:imeOptions="actionDone"
            tools:ignore="LabelFor"
            android:textSize="15sp"
            android:textColor="#999999"/>

        <Button
            android:id="@+id/go"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:textAllCaps="false"
            android:background="@drawable/bg_btn_com"
            android:textColor="@drawable/bg_btn_com"
            android:text="@string/go" />

    </LinearLayout>

    <View
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/bg_btn_bar"
            android:textColor="@drawable/bg_btn_bar"
            android:text="@string/setting" />

        <Button
            android:id="@+id/page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/bg_btn_bar"
            android:textColor="@drawable/bg_btn_bar"
            android:text="@string/page" />

        <Button
            android:id="@+id/menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/bg_btn_bar"
            android:textColor="@drawable/bg_btn_bar"
            android:text="@string/menu" />

    </LinearLayout>

</LinearLayout>